Finished landingpage + Added countdown to start

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-
-
 .header {
     color: white;
 }
@@ -17,6 +13,7 @@
 
 section {
     margin-top: 5rem;
+    padding: 1rem;
 }
 
 .kampPreview {
@@ -77,4 +74,12 @@ section {
     font-family: Bahnschrift, Arial, sans-serif;
     font-weight: bold;
     line-height: 1.2;
+}
+
+
+@media (max-width: 768px) {
+   .klublogo {
+    width: auto !important;
+    height: 40px !important;
+}
 }
